fixed issues with dropdown not rendering correctly on mobile

--- a/style.css
+++ b/style.css
@@ -172,4 +172,8 @@ math {
         max-width: 600px;
         width: 100%;
     }
+
+    #formulas {
+        max-width: 50vw;
+    }
 }
